--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <title>Spinnerbird</title>
 <style> 
 img {  
+  -moz-animation-duration: 10s;  
+  -moz-animation-name: spinnerbird;  
+  -moz-animation-iteration-count: infinite;  
+  -moz-animation-timing-function: linear;
   -webkit-animation-duration: 10s;  
   -webkit-animation-name: spinnerbird;  
   -webkit-animation-iteration-count: infinite;  
@@ -17,6 +21,16 @@ img {
 
   to {  
   -webkit-transform: scale(1.0) rotate(360deg);
+  }  
+}
+
+@-moz-keyframes spinnerbird {  
+  from {  
+  -moz-transform: scale(1.0) rotate(0deg);
+  }  
+
+  to {  
+  -moz-transform: scale(1.0) rotate(360deg);
   }  
 }
 </style>
